--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 0.625em;
+    gap: 1.25em;
 }
 
 /* Trap the Chicken game styling */
@@ -618,12 +618,12 @@ footer {
 /* Responsive design */
 @media screen and (max-width: 800px) {
     .game-container {
-        flex-direction: column;
+        flex-direction: row;
     }
 
     #game, #trap-the-chicken {
         width: 100%;
-    }
+    }dddddddd
 
     #subpage4 .video-container {
         width: 100%;
