--- a/style.css
+++ b/style.css
@@ -477,6 +477,20 @@ footer {
     flex-direction: column;
 }
 
+#instructions2 {
+    background-color: #333333;
+    padding: 0.625em;
+    border-radius: 0.625em;
+    margin-bottom: 1.25em;
+    width: 100%;
+    text-align: center;
+    font-size: 1.125em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 #controls {
     display: flex;
     justify-content: center;
