--- a/style.css
+++ b/style.css
@@ -664,7 +664,7 @@ footer {
 /* Responsive Design */
 @media screen and (max-width: 800px) {
     .game-container {
-        flex-direction: column;
+        flex-direction: row;
     }
 
     #game, #trap-the-chicken {
